@@ -7,9 +7,11 @@ indicates the contributor was also the author of the fix; Thanks!
 
 ***  Support runtime access to public signal names.
 
+**** Improve error handling on slices of arrays, bug226. [by Bryon Bradley]
+
 **** Fix "make install" with configure outside srcdir.  [Stefan Wallentowitz]
 
-**** Improve error handling on slices of arrays, bug226. [by Bryon Bradley]
+**** Fix trace files with empty modules crashing some viewers.
 
 * Verilator 3.801 2010/03/17
 
